syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.zelbess.tripupdates";
option java_outer_classname = "TripServiceProto";
option objc_class_prefix = "HLW";

package trips;

service TripService {

  rpc createTrip (CreateTripRequest) returns (CreateTripReply) {}
  rpc followTrip (FollowTripRequest) returns (stream FollowTripReply) {}
  rpc updateLocation(stream UpdateLocationRequest) returns (stream UpdateLocationReply) {}
}

message CreateTripRequest {
  int32 driverId = 1;
  int32 invitedPassengerId = 2;
}
message CreateTripReply {
  int32 id = 1;
}

message FollowTripRequest {
  int32 id = 1;
}
message FollowTripReply {
  TripNetworkModel trip = 1;
}
message TripNetworkModel {
  int32 id = 1;
  string message = 2;
}

message UpdateLocationRequest {
  string userId = 1;
  double lat = 2;
  double lon = 3;
}
message UpdateLocationReply {
  int32 statusCode = 1;
}